<resources>
    <string name="app_name">feature</string>
    <string name="characters">Characters</string>
    <string name="locations">Locations</string>
    <string name="episodes">Episodes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alive">Alive</string>
    <string name="character_name">Character name</string>
    <string name="species">Species</string>
    <string name="gender">Gender</string>
    <string name="earth">Earth</string>
    <string name="origin">Origin</string>
    <string name="type">Type</string>
    <string name="location">Location</string>
    <string name="s01e01">S01E01</string>
    <string name="episode">Episode</string>
    <string name="pilot">Pilot</string>
    <string name="date">Date</string>
    <string name="retry">Retry</string>
    <string name="apply">Apply</string>
    <string name="episode_filter">Episode filter</string>
    <string name="enter_name_or_episode_code">Enter name or episode code</string>
    <string name="clear">Clear</string>
    <string name="empty_line" />
    <string name="filter_by_name">Filter by name</string>
    <string name="search_by_episode">Filter by episode</string>
    <string name="episode_not_found">Episode not found</string>
    <string name="episode_name">Episode Name</string>
    <string name="episode_date">Episode Date</string>
    <string name="status">Status</string>
    <string name="location_name">Location name</string>
    <string name="planet">Planet</string>
    <string name="location_not_found">Location not found</string>
    <string name="female_gender">female</string>
    <string name="male_gender">male</string>
    <string name="unknown_gender">unknown</string>
    <string name="genderless_gender">genderless</string>
    <string name="alive_status">alive</string>
    <string name="dead_status">dead</string>
    <string name="unknown_status">unknown</string>
    <string name="location_filter">Location filter</string>
    <string name="filter_by_type">Filter by type</string>
    <string name="filter_by_dimension">Filter by dimension</string>
    <string name="enter_name_type_or_dimension">Enter name, type or dimension</string>
    <string name="space_station">Space station</string>
    <string name="character_does_not_exist_in_cache">Character does not exist in cache</string>
</resources>