<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/defaultPadding">

    <TextView
        android:id="@+id/episode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/defaultMargin"
        android:text="@{episode.episode}"
        android:textColor="@color/black"
        android:textSize="@dimen/episodeTextSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/episode" />

    <TextView
        android:id="@+id/episodeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.subtitle1"
        android:textColor="@color/detailsColor"
        app:layout_constraintStart_toStartOf="@+id/episode"
        app:layout_constraintTop_toBottomOf="@+id/episode"
        tools:text="@string/pilot" />

    <TextView
        android:id="@+id/airDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMargin"
        app:layout_constraintStart_toStartOf="@+id/episodeName"
        app:layout_constraintTop_toBottomOf="@+id/episodeName"
        tools:text="@string/date" />

</androidx.constraintlayout.widget.ConstraintLayout>