<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="@dimen/toolBarElevation"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:contentInsetStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/defaultMargin"
                android:layout_marginHorizontal="@dimen/defaultMargin"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/arrowBack"
                    android:src="@drawable/arrow_back"
                    android:layout_width="@dimen/arrowSize"
                    android:layout_height="@dimen/arrowSize"
                    android:layout_gravity="end"
                    android:background="@color/white"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/toolbarText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/twMarginStart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/arrowBack"
                    android:textSize="@dimen/toolBarTitleTextSize"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.666"
                    tools:text="@string/character_name" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:isScrollContainer="true"
            android:scrollIndicators="right"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="@dimen/cardViewSize"
                    android:layout_height="@dimen/cardViewSize"
                    android:layout_marginTop="60dp"
                    app:cardCornerRadius="@dimen/cardViewSize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                </androidx.cardview.widget.CardView>

                <ImageView
                    android:id="@+id/characterImage"
                    android:layout_width="@dimen/avatarSize"
                    android:layout_height="@dimen/avatarSize"
                    android:layout_marginHorizontal="@dimen/marginHorizontalAvatar"
                    android:layout_marginTop="@dimen/marginTopAvatar"
                    android:elevation="@dimen/marginTopAvatar"
                    app:layout_constraintEnd_toEndOf="@+id/cardView"
                    app:layout_constraintStart_toStartOf="@+id/cardView"
                    app:layout_constraintTop_toTopOf="@+id/cardView"
                    tools:src="@tools:sample/avatars" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/statusLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-60dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/paddingTopLinearLayout"
                    android:paddingBottom="@dimen/toolBarElevation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView">

                    <TextView
                        android:id="@+id/characterStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/detailsColor"
                        android:textSize="@dimen/characterStatusTExtSize"
                        android:textAppearance="@style/TextAppearance.caption"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/characterImage"
                        tools:text="@string/alive" />


                    <TextView
                        android:id="@+id/characterName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.h4"
                        app:layout_constraintTop_toBottomOf="@id/characterStatus"
                        tools:text="@string/character_name" />

                    <TextView
                        android:id="@+id/characterSpecies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/speciesColor"
                        android:textAppearance="@style/TextAppearance.subtitle1"
                        app:layout_constraintTop_toBottomOf="@id/characterName"
                        tools:text="@string/species" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/characterInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/characterInfoMarginTop"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/cardview_default_elevation"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/statusLayout">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintTop_toBottomOf="@id/statusLayout" />

                    <TextView
                        style="@style/Theme.SubTitle"
                        android:text="@string/gender"
                        android:layout_marginStart="@dimen/marginStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/paddingBottomTitleDetails"
                         />

                    <TextView
                        android:id="@+id/characterGender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:layout_marginStart="@dimen/marginStart"
                        android:textColor="@color/detailsColor"
                        tools:text="@string/gender" />

                    <View
                        android:id="@+id/divider"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dividerSize"
                        />

                    <TextView
                        style="@style/Theme.SubTitle"
                        android:text="@string/origin"
                        android:layout_width="wrap_content"
                        android:layout_marginStart="@dimen/marginStart"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingBottom="@dimen/paddingBottomTitleDetails"
                         />

                    <TextView
                        android:id="@+id/characterOrigin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/marginStart"
                        android:layout_marginBottom="12dp"
                        android:textColor="@color/detailsColor"
                        tools:text="@string/origin" />

                    <View
                        android:id="@+id/divider2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dividerSize" />



                    <View
                        android:id="@+id/divider3"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dividerSize" />

                    <LinearLayout
                        android:id="@+id/locationGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="vertical">

                        <TextView
                            style="@style/Theme.SubTitle"
                            android:text="@string/location"
                            android:id="@+id/location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/marginStart"
                            android:layout_marginTop="8dp"
                            android:paddingBottom="@dimen/paddingBottomTitleDetails"
                             />

                        <TextView
                            android:id="@+id/characterLocation"
                            android:layout_width="355dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:layout_marginStart="@dimen/marginStart"
                            android:textColor="@color/detailsColor"
                            tools:text="@string/location" />

                    </LinearLayout>


                    <View
                        android:id="@+id/divider4"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dividerSize" />


                </LinearLayout>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginTopEpisode"
                    android:layout_marginEnd="@dimen/cardview_default_elevation"
                    android:importantForAccessibility="no"
                    app:layout_constraintBottom_toBottomOf="@id/characterInfo"
                    app:layout_constraintEnd_toEndOf="@id/characterInfo"
                    app:layout_constraintTop_toTopOf="@id/characterInfo" />

                <TextView
                    android:id="@+id/episodesText"
                    style="@style/Theme.SubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/marginStart"
                    android:text="@string/episodes"
                    app:layout_constraintTop_toBottomOf="@+id/characterInfo"
                    tools:layout_editor_absoluteX="2dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewEpisode"
                    android:layout_marginStart="@dimen/marginStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/paddingBottomRV"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/episodesText"
                    tools:listitem="@layout/episode_item" />
                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/episodesText" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>